# CMakeLists.txt for RenderStack/libraries

add_subdirectory(RectangleBinPack)
add_subdirectory(renderstack_geometry)
add_subdirectory(renderstack_graphics)
add_subdirectory(renderstack_mesh)
add_subdirectory(renderstack_renderer)
add_subdirectory(renderstack_scene)
add_subdirectory(renderstack_toolkit)
add_subdirectory(renderstack_ui)

# add_subdirectory(zlib-1.2.7)
# add_subdirectory(lpng1512)

# Experimental stuff
# add_subdirectory(gles3_dummy)
# add_subdirectory(egl_dummy)